Installed StaticFiles package and tested angular

--- a/FacebookMessenger/Views/Home/Index.cshtml
+++ b/FacebookMessenger/Views/Home/Index.cshtml
@@ -1,12 +1,14 @@
 ﻿<!DOCTYPE html>
 
-<html>
+<html ng-app>
 <head>
     <title>title</title>
 </head>
 <body>
 <div>
-    <h1>Hello</h1>
+    <h1>Hello {{2+2}}</h1>
 </div>
+    
+    <script src="~/lib/angular/angular.js"></script>
 </body>
 </html>
